<resources>
    <string name="app_name">IWishToFish</string>

    <string name="action_settings">Settings</string>
    <string name="about_title">About us</string>
    <string name="settings_title">Settings</string>

    <!-- Left Navigation Drawer-->
    <string name="navigation_drawer_open">Navigation opened</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="left_drawer_events_around">Fishing events</string>
    <string name="left_drawer_report_idiots">Report behaviour</string>
    <string name="left_drawer_share_trophy">Share your trophy</string>
    <string name="left_drawer_settings">Settings</string>
    <string name="left_drawer_about">About</string>
    <string name="left_drawer_content_description_user_icon">User\'s avatar</string>
    <string name="left_drawer_content_description_menu_item_icon">Menu item icon</string>
    <string name="left_drawer_content_fishing_type_icon">Icon identifying fishing type</string>

    <string name="toast__refreshed">Refreshed...</string>

    <!-- Event/Events-->
    <string name="events_toast__loading_failed">Sorry, but loading of events failed. Please, try again later.</string>
    <string name="event_toast__loading_failed">Sorry, but loading of event failed. Please, try again later.</string>
    <string name="event_location_comma"> %1$s, %2$s</string>
    <plurals name="event_max_persons">
        <item quantity="one">Max %d person</item>
        <item quantity="other">Max %d persons</item>
    </plurals>
</resources>
